# linux-detective-toolkit

./: .gitignore  CMakeLists.txt  DEMO.md  LICENSE.txt  README.md
src/: 001-syscalls.c  002-read-another-file.c  003-back-to-the-future.c  004-ipv6-only.c  005-fork.c  006-abba.c  007-multi-thread-deadlock.c  010-auditor.c  CMakeLists.txt  devious_log.h
