#
#  Example from "Linux Detective Toolkit: 360° debugging and black-box analysis without printf() or GDB" by Bartosz Moczulski
#  Copyright © 2025
#
#  Provided for educational purposes only.
#  Not for reuse, redistribution, or public presentation without permission.
#

cmake_minimum_required(VERSION 3.20)
project(linux-developer-toolkit LANGUAGES C CXX)
add_subdirectory(src)